feat: change output varName of all nodes